shorter code snippet

--- a/docs/docs/how_to/code_splitter.ipynb
+++ b/docs/docs/how_to/code_splitter.ipynb
@@ -762,30 +762,20 @@
    "outputs": [],
    "source": [
     "POWERSHELL_CODE = \"\"\"\n",
-    "function Process-Numbers {\n",
-    "    param($numbers)\n",
-    "    foreach ($number in $numbers) {\n",
-    "        if (Is-Prime -number $number) {\n",
-    "            Write-Host \"$number is a prime number\"\n",
-    "        } else {\n",
-    "            Write-Host \"$number is not a prime number\"\n",
-    "        }\n",
-    "    }\n",
-    "}\n",
-    "function Test-ErrorHandling {\n",
-    "    try {\n",
-    "        $result = 1 / 0\n",
-    "    }\n",
-    "    catch {\n",
-    "        Write-Host \"Error: Division by zero\"\n",
-    "    }\n",
-    "    finally {\n",
-    "        Write-Host \"Cleanup can go here.\"\n",
-    "    }\n",
+    "$directoryPath = Get-Location\n",
+    "\n",
+    "$items = Get-ChildItem -Path $directoryPath\n",
+    "\n",
+    "$files = $items | Where-Object { -not $_.PSIsContainer }\n",
+    "\n",
+    "$sortedFiles = $files | Sort-Object LastWriteTime\n",
+    "\n",
+    "foreach ($file in $sortedFiles) {\n",
+    "    Write-Output (\"Name: \" + $file.Name + \" | Last Write Time: \" + $file.LastWriteTime)\n",
     "}\n",
     "\"\"\"\n",
     "powershell_splitter = RecursiveCharacterTextSplitter.from_language(\n",
-    "    language=Language.POWERSHELL, chunk_size=50, chunk_overlap=0\n",
+    "    language=Language.POWERSHELL, chunk_size=100, chunk_overlap=0\n",
     ")\n",
     "powershell_docs = powershell_splitter.create_documents([POWERSHELL_CODE])\n",
     "powershell_docs"
