--- a/docs/docs/how_to/index.mdx
+++ b/docs/docs/how_to/index.mdx
@@ -201,6 +201,7 @@ LangChain [Tools](/docs/concepts/#tools) contain a description of the tool (to p
 - [How to: convert Runnables to tools](/docs/how_to/convert_runnable_to_tool)
 - [How to: add ad-hoc tool calling capability to models](/docs/how_to/tools_prompting)
 - [How to: pass in runtime secrets](/docs/how_to/runnable_runtime_secrets)
+- [How to: handle large numbers of tools](/docs/how_to/many_tools)
 
 ### Multimodal
 
