--- a/docs/docs/how_to/many_tools.ipynb
+++ b/docs/docs/how_to/many_tools.ipynb
@@ -88,6 +88,7 @@
     "import re\n",
     "import uuid\n",
     "\n",
+    "\n",
     "def create_tool(company: str) -> dict:\n",
     "    \"\"\"Create schema for a placeholder tool.\"\"\"\n",
     "    formatted_company = re.sub(r\"[^\\w\\s]\", \"\", company).replace(\" \", \"_\")\n",
@@ -98,6 +99,7 @@
     "        \"properties\": {\"year\": {\"title\": \"year\", \"type\": \"integer\"}},\n",
     "        \"required\": [\"year\"],\n",
     "    }\n",
+    "\n",
     "\n",
     "s_and_p_500_companies = [  # Abbreviated list for demonstration purposes\n",
     "    \"3M\",\n",
@@ -112,8 +114,7 @@
     "]\n",
     "\n",
     "tool_registry = {\n",
-    "    str(uuid.uuid4()): create_tool(company)\n",
-    "    for company in s_and_p_500_companies\n",
+    "    str(uuid.uuid4()): create_tool(company) for company in s_and_p_500_companies\n",
     "}"
    ]
   },
@@ -135,7 +136,6 @@
     "from langchain_core.documents import Document\n",
     "from langchain_core.vectorstores import InMemoryVectorStore, VectorStore\n",
     "from langchain_openai import OpenAIEmbeddings\n",
-    "\n",
     "\n",
     "tool_documents = [\n",
     "    Document(page_content=tool[\"description\"], id=id)\n",
@@ -231,7 +231,9 @@
     }
    ],
    "source": [
-    "response = await chain.ainvoke({\"query\": \"Can you give me some information about AMD in 2022?\"})\n",
+    "response = await chain.ainvoke(\n",
+    "    {\"query\": \"Can you give me some information about AMD in 2022?\"}\n",
+    ")\n",
     "response.tool_calls"
    ]
   },
