--- a/docs/docs/how_to/many_tools.ipynb
+++ b/docs/docs/how_to/many_tools.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "- [Tools](/docs/concepts#tools)\n",
     "- [Tool calling](/docs/concepts/#functiontool-calling)\n",
-    "- [Embeddings](/docs/concepts/#embedding-models) and [vector stores]((/docs/concepts/#vector-stores))\n",
+    "- [Embeddings](/docs/concepts/#embedding-models) and [vector stores](/docs/concepts#vector-stores)\n",
     "\n",
     ":::\n",
     "\n",
@@ -157,7 +157,7 @@
     "- We create a `retrieve_tools` runnable that will return tools that are relevant to a user query;\n",
     "- We create a `get_chat_model` runnable that will receive the query and tools, bind the tools to a chat model, and run it on the query.\n",
     "\n",
-    "Note that here we leverage the fact that if a [RunnableLambda](/docs/how_to/functions/) returns an instance of Runnable, that instance is called on its input. So `get_chat_model` only needs to construct the chat model for the chat model to be called on the input query."
+    "Note that here we leverage the fact that if a [RunnableLambda](/docs/how_to/functions/) returns an instance of Runnable, that instance is [called on its input](/docs/how_to/dynamic_chain). So `get_chat_model` only needs to construct the chat model for the chat model to be called on the input query."
    ]
   },
   {
