remove erroneous langgraph reference

--- a/docs/docs/how_to/many_tools.ipynb
+++ b/docs/docs/how_to/many_tools.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "## Dependencies\n",
     "\n",
-    "**Note**: this guide uses [OpenAI](/docs/integrations/platforms/openai/) for embeddings, but any LangChain embeddings should suffice. We will use a simple [LangGraph](https://langchain-ai.github.io/langgraph/) agent for demonstration purposes."
+    "**Note**: this guide uses [OpenAI](/docs/integrations/platforms/openai/) for embeddings, but any LangChain embeddings should suffice."
    ]
   },
   {
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "%%capture --no-stderr\n",
-    "%pip install -U langchain-core langchain-openai langgraph"
+    "%pip install -U langchain-core langchain-openai"
    ]
   },
   {
