fix chat model tabs

--- a/docs/docs/how_to/many_tools.ipynb
+++ b/docs/docs/how_to/many_tools.ipynb
@@ -23,8 +23,6 @@
     "\n",
     "Here we will demonstrate how to dynamically adjust the tools available to a model. Bottom line up front: like [RAG](/docs/tutorials/rag) and similar methods, we prefix the model invocation by retrieving over available tools. Although we demonstrate one implementation that searches over tool descriptions, the details of the tool selection can be customized as needed.\n",
     "\n",
-    "## Dependencies\n",
-    "\n",
     "**Note**: this guide uses [OpenAI](/docs/integrations/platforms/openai/) for embeddings, but any LangChain embeddings should suffice."
    ]
   },
@@ -47,9 +45,9 @@
     "We first instantiate a chat model that supports [tool calling](/docs/how_to/tool_calling/):\n",
     "\n",
     "```{=mdx}\n",
-    "<ChatModelTabs\n",
-    "  customVarName=\"llm\"\n",
-    "/>\n",
+    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "\n",
+    "<ChatModelTabs customVarName=\"llm\" />\n",
     "```"
    ]
   },
