--- a/docs/docs/integrations/chat/cohere.ipynb
+++ b/docs/docs/integrations/chat/cohere.ipynb
@@ -277,14 +277,14 @@
     "    \"\"\"\n",
     "    return number + 10\n",
     "\n",
+    "\n",
     "def invoke_tools(tool_calls, messages):\n",
     "    for tool_call in tool_calls:\n",
-    "        selected_tool = {\"magic_function\":magic_function}[\n",
-    "            tool_call[\"name\"].lower()\n",
-    "        ]\n",
+    "        selected_tool = {\"magic_function\": magic_function}[tool_call[\"name\"].lower()]\n",
     "        tool_output = selected_tool.invoke(tool_call[\"args\"])\n",
     "        messages.append(ToolMessage(tool_output, tool_call_id=tool_call[\"id\"]))\n",
     "    return messages\n",
+    "\n",
     "\n",
     "tools = [magic_function]"
    ]
@@ -297,11 +297,7 @@
    "outputs": [],
    "source": [
     "llm_with_tools = chat.bind_tools(tools=tools)\n",
-    "messages = [\n",
-    "    HumanMessage(\n",
-    "        content=\"What is the value of magic_function(2)?\"\n",
-    "    )\n",
-    "]"
+    "messages = [HumanMessage(content=\"What is the value of magic_function(2)?\")]"
    ]
   },
   {
