--- a/docs/docs/integrations/retrievers/nanopq.ipynb
+++ b/docs/docs/integrations/retrievers/nanopq.ipynb
@@ -29,8 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.retrievers import NanoPQRetriever\n",
-    "from langchain_community.embeddings.spacy_embeddings import SpacyEmbeddings"
+    "from langchain_community.embeddings.spacy_embeddings import SpacyEmbeddings\n",
+    "from langchain_community.retrievers import NanoPQRetriever"
    ]
   },
   {
@@ -48,8 +48,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriever = NanoPQRetriever.from_texts([\"Great world\", \"great words\", \"world\", \"planets of the world\"], \n",
-    "                                       SpacyEmbeddings(model_name=\"en_core_web_sm\"), clusters=2, subspace=2)"
+    "retriever = NanoPQRetriever.from_texts(\n",
+    "    [\"Great world\", \"great words\", \"world\", \"planets of the world\"],\n",
+    "    SpacyEmbeddings(model_name=\"en_core_web_sm\"),\n",
+    "    clusters=2,\n",
+    "    subspace=2,\n",
+    ")"
    ]
   },
   {
