--- a/docs/docs/integrations/document_loaders/unstructured_file.ipynb
+++ b/docs/docs/integrations/document_loaders/unstructured_file.ipynb
@@ -107,7 +107,10 @@
     }
    ],
    "source": [
-    "file_paths = [\"./example_data/whatsapp_chat.txt\", \"./example_data/state_of_the_union.txt\"]\n",
+    "file_paths = [\n",
+    "    \"./example_data/whatsapp_chat.txt\",\n",
+    "    \"./example_data/state_of_the_union.txt\",\n",
+    "]\n",
     "\n",
     "loader = UnstructuredLoader(file_paths)\n",
     "\n",
@@ -169,9 +172,7 @@
    "source": [
     "from langchain_unstructured import UnstructuredLoader\n",
     "\n",
-    "loader = UnstructuredLoader(\n",
-    "    \"./example_data/layout-parser-paper.pdf\", strategy=\"fast\"\n",
-    ")\n",
+    "loader = UnstructuredLoader(\"./example_data/layout-parser-paper.pdf\", strategy=\"fast\")\n",
     "\n",
     "docs = loader.load()\n",
     "\n",
@@ -402,7 +403,7 @@
    "source": [
     "import requests\n",
     "from langchain_unstructured import UnstructuredLoader\n",
-    "from unstructured_client.utils import RetryConfig, BackoffStrategy\n",
+    "from unstructured_client.utils import BackoffStrategy, RetryConfig\n",
     "\n",
     "loader = UnstructuredLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
@@ -419,7 +420,7 @@
     "            exponent=1.5,\n",
     "            max_elapsed_time=900000,\n",
     "        ),\n",
-    "    )\n",
+    "    ),\n",
     ")\n",
     "\n",
     "docs = loader.load()\n",
