--- a/docs/docs/integrations/vectorstores/aerospike.ipynb
+++ b/docs/docs/integrations/vectorstores/aerospike.ipynb
@@ -401,7 +401,7 @@
     "        vector_field=VECTOR_KEY,\n",
     "        vector_distance_metric=MODEL_DISTANCE_CALC,\n",
     "        dimensions=MODEL_DIM,\n",
-    "        index_meta_data={\n",
+    "        index_labels={\n",
     "            \"model\": \"miniLM-L6-v2\",\n",
     "            \"date\": \"05/04/2024\",\n",
     "            \"dim\": str(MODEL_DIM),\n",
