change client to UnstructuredClient, add os.getenv(), and update jupyter notebook

--- a/docs/docs/integrations/document_loaders/unstructured_file.ipynb
+++ b/docs/docs/integrations/document_loaders/unstructured_file.ipynb
@@ -58,29 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "79d3e549",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Madam Speaker, Madam Vice President, our First Lady and Second Gentleman. Members of Congress and the Cabinet. Justices of the Supreme Court. My fellow Americans.'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_unstructured import UnstructuredLoader\n",
     "\n",
     "loader = UnstructuredLoader(\"./example_data/state_of_the_union.txt\")\n",
     "\n",
-    "docs = loader.load()\n",
-    "\n",
-    "docs[0].page_content[:400]"
+    "docs = loader.load()"
    ]
   },
   {
@@ -254,7 +241,11 @@
    "source": [
     "# Install package\n",
     "%pip install \"langchain-unstructured\"\n",
-    "%pip install \"unstructured-client\""
+    "%pip install \"unstructured-client\"\n",
+    "\n",
+    "# Set API key\n",
+    "import os\n",
+    "os.environ['UNSTRUCTURED_API_KEY'] = 'FAKE_API_KEY'"
    ]
   },
   {
@@ -289,9 +280,8 @@
     "\n",
     "loader = UnstructuredLoader(\n",
     "    file_path=\"example_data/fake.docx\",\n",
-    "    api_key=\"FAKE_API_KEY\",\n",
+    "    api_key=os.getenv('UNSTRUCTURED_API_KEY'),\n",
     "    partition_via_api=True,\n",
-    "    url=\"https://api.unstructuredapp.io/general/v0/general\",\n",
     ")\n",
     "\n",
     "docs = loader.load()\n",
@@ -338,9 +328,8 @@
    "source": [
     "loader = UnstructuredLoader(\n",
     "    file_path=[\"example_data/fake.docx\", \"example_data/fake-email.eml\"],\n",
-    "    api_key=\"FAKE_API_KEY\",\n",
+    "    api_key=os.getenv('UNSTRUCTURED_API_KEY'),\n",
     "    partition_via_api=True,\n",
-    "    url=\"https://api.unstructuredapp.io/general/v0/general\",\n",
     ")\n",
     "\n",
     "docs = loader.load()\n",
@@ -359,13 +348,13 @@
     "Partitioning with the Unstructured API relies on the [Unstructured SDK\n",
     "Client](https://docs.unstructured.io/api-reference/api-services/sdk).\n",
     "\n",
-    "Below is an example showing how you can customize the client by using your own `requests.Session()`\n",
-    "and a `RetryConfig` object for more control over how failed requests are handled."
+    "Below is an example showing how you can customize some features of the client and use your own\n",
+    "`requests.Session()`, pass in an alternative `server_url`, or customize the `RetryConfig` object for more control over how failed requests are handled."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "58e55264",
    "metadata": {},
    "outputs": [
@@ -403,14 +392,13 @@
    "source": [
     "import requests\n",
     "from langchain_unstructured import UnstructuredLoader\n",
-    "from unstructured_client.utils import BackoffStrategy, RetryConfig\n",
+    "from unstructured_client import UnstructuredClient\n",
+    "from unstructured_client.utils import RetryConfig, BackoffStrategy\n",
     "\n",
-    "loader = UnstructuredLoader(\n",
-    "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    api_key=\"FAKE_API_KEY\",\n",
-    "    partition_via_api=True,\n",
-    "    url=\"https://api.unstructuredapp.io/general/v0/general\",\n",
+    "client = UnstructuredClient(\n",
+    "    api_key_auth=os.getenv('UNSTRUCTURED_API_KEY'),  # Note: the client API param is \"api_key_auth\" instead of \"api_key\"\n",
     "    client=requests.Session(),\n",
+    "    server_url=\"https://api.unstructuredapp.io/general/v0/general\",\n",
     "    retry_config=RetryConfig(\n",
     "        strategy=\"backoff\",\n",
     "        retry_connection_errors=True,\n",
@@ -420,7 +408,12 @@
     "            exponent=1.5,\n",
     "            max_elapsed_time=900000,\n",
     "        ),\n",
-    "    ),\n",
+    "    ),)\n",
+    "\n",
+    "loader = UnstructuredLoader(\n",
+    "    \"./example_data/layout-parser-paper.pdf\",\n",
+    "    partition_via_api=True,\n",
+    "    client=client,\n",
     ")\n",
     "\n",
     "docs = loader.load()\n",
@@ -457,6 +450,13 @@
    "id": "e9f1c20d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Partitioning locally even though api_key is defined since partition_via_api=False.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
