--- a/docs/docs/integrations/toolkits/cassandra_database.ipynb
+++ b/docs/docs/integrations/toolkits/cassandra_database.ipynb
@@ -8,10 +8,11 @@
     "\n",
     ">`Apache Cassandra®` is a widely used database for storing transactional application data. The introduction of functions and >tooling in Large Language Models has opened up some exciting use cases for existing data in Generative AI applications. \n",
     "\n",
-    ">The `Cassandra Database` toolkit enables AI engineers to efficiently integrate Agents with Cassandra data, offering the >following features: \n",
-    "> - Fast data access through optimized queries. Most queries should run in single-digit ms or less. \n",
-    "> - Schema introspection to enhance LLM reasoning capabilities \n",
-    "> - Compatibility with various Cassandra deployments, including Apache Cassandra®, DataStax Enterprise™, and DataStax Astra™ \n",
+    ">The `Cassandra Database` toolkit enables AI engineers to integrate agents with Cassandra data efficiently, offering \n",
+    ">the following features: \n",
+    "> - Fast data access through optimized queries. Most queries should run in single-digit ms or less.\n",
+    "> - Schema introspection to enhance LLM reasoning capabilities\n",
+    "> - Compatibility with various Cassandra deployments, including Apache Cassandra®, DataStax Enterprise™, and DataStax Astra™\n",
     "> - Currently, the toolkit is limited to SELECT queries and schema introspection operations. (Safety first)\n",
     "\n",
     "For more information on creating a Cassandra DB agent see the [CQL agent cookbook](https://github.com/langchain-ai/langchain/blob/master/cookbook/cql_agent.ipynb)\n",
