--- a/docs/docs/integrations/document_loaders/unstructured_file.ipynb
+++ b/docs/docs/integrations/document_loaders/unstructured_file.ipynb
@@ -19,41 +19,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet \"langchain-unstructured\"\n",
-    "\n",
-    "# # Required package for local partitioning\n",
-    "%pip install --upgrade --quiet \"unstructured[all-docs]\"\n",
-    "\n",
-    "# # Required package for API partitioning\n",
-    "%pip install --upgrade --quiet \"unstructured-client\""
+    "# Install package, compatible with API partitioning\n",
+    "%pip install --upgrade --quiet \"langchain-unstructured\""
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "54d62efd",
+   "cell_type": "markdown",
+   "id": "e75e2a6d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# # Install other dependencies for local partitioning\n",
-    "# # https://github.com/Unstructured-IO/unstructured/blob/main/docs/source/installing.rst\n",
-    "# !brew install libmagic\n",
-    "# !brew install poppler\n",
-    "# !brew install tesseract\n",
-    "# # If parsing xml / html documents:\n",
-    "# !brew install libxml2\n",
-    "# !brew install libxslt"
+    "### Local Partitioning (Optional)\n",
+    "\n",
+    "By default, `langchain-unstructured` installs a smaller footprint that requires\n",
+    "offloading of the partitioning logic to the Unstructured API.\n",
+    "\n",
+    "If you would like to run the partitioning logic locally, you will need to install\n",
+    "a combination of system dependencies, as outlined in the \n",
+    "[Unstructured documentation here](https://docs.unstructured.io/open-source/installation/full-installation).\n",
+    "\n",
+    "For example, on Macs you can install the required dependencies with:\n",
+    "\n",
+    "```bash\n",
+    "# base dependencies\n",
+    "brew install libmagic poppler tesseract\n",
+    "\n",
+    "# If parsing xml / html documents:\n",
+    "brew install libxml2 libxslt\n",
+    "```\n",
+    "\n",
+    "You can install the required `pip` dependencies with:\n",
+    "\n",
+    "```bash\n",
+    "pip install \"langchain-unstructured[local]\"\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "af6a64f5",
+   "cell_type": "markdown",
+   "id": "a9c1c775",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# import nltk\n",
-    "# nltk.download('punkt')"
+    "### Quickstart\n",
+    "\n",
+    "To simply load a file as a document, you can use the LangChain `DocumentLoader.load` \n",
+    "interface:"
    ]
   },
   {
@@ -245,7 +254,8 @@
     "\n",
     "# Set API key\n",
     "import os\n",
-    "os.environ['UNSTRUCTURED_API_KEY'] = 'FAKE_API_KEY'"
+    "\n",
+    "os.environ[\"UNSTRUCTURED_API_KEY\"] = \"FAKE_API_KEY\""
    ]
   },
   {
@@ -280,7 +290,7 @@
     "\n",
     "loader = UnstructuredLoader(\n",
     "    file_path=\"example_data/fake.docx\",\n",
-    "    api_key=os.getenv('UNSTRUCTURED_API_KEY'),\n",
+    "    api_key=os.getenv(\"UNSTRUCTURED_API_KEY\"),\n",
     "    partition_via_api=True,\n",
     ")\n",
     "\n",
@@ -328,7 +338,7 @@
    "source": [
     "loader = UnstructuredLoader(\n",
     "    file_path=[\"example_data/fake.docx\", \"example_data/fake-email.eml\"],\n",
-    "    api_key=os.getenv('UNSTRUCTURED_API_KEY'),\n",
+    "    api_key=os.getenv(\"UNSTRUCTURED_API_KEY\"),\n",
     "    partition_via_api=True,\n",
     ")\n",
     "\n",
@@ -393,10 +403,12 @@
     "import requests\n",
     "from langchain_unstructured import UnstructuredLoader\n",
     "from unstructured_client import UnstructuredClient\n",
-    "from unstructured_client.utils import RetryConfig, BackoffStrategy\n",
+    "from unstructured_client.utils import BackoffStrategy, RetryConfig\n",
     "\n",
     "client = UnstructuredClient(\n",
-    "    api_key_auth=os.getenv('UNSTRUCTURED_API_KEY'),  # Note: the client API param is \"api_key_auth\" instead of \"api_key\"\n",
+    "    api_key_auth=os.getenv(\n",
+    "        \"UNSTRUCTURED_API_KEY\"\n",
+    "    ),  # Note: the client API param is \"api_key_auth\" instead of \"api_key\"\n",
     "    client=requests.Session(),\n",
     "    server_url=\"https://api.unstructuredapp.io/general/v0/general\",\n",
     "    retry_config=RetryConfig(\n",
@@ -408,7 +420,8 @@
     "            exponent=1.5,\n",
     "            max_elapsed_time=900000,\n",
     "        ),\n",
-    "    ),)\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "loader = UnstructuredLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
