--- a/docs/docs/how_to/tool_calling.ipynb
+++ b/docs/docs/how_to/tool_calling.ipynb
@@ -24,55 +24,30 @@
     "This guide assumes familiarity with the following concepts:\n",
     "- [Chat models](/docs/concepts/#chat-models)\n",
     "- [LangChain Tools](/docs/concepts/#tools)\n",
+    "- [Tool calling](/docs/concepts/#functiontool-calling)\n",
     "- [Output parsers](/docs/concepts/#output-parsers)\n",
     "\n",
     ":::\n",
     "\n",
-    ":::info Tool calling vs function calling\n",
+    "[Tool calling](/docs/concepts/#tools) allows a chat model to respond to a given prompt by \"calling a tool\".\n",
+    "Remember, while the name implies that the model is directly performing some action, this is actually not the case!\n",
+    "The model only generates the arguments to a tool, and actually running the tool (or not) is up to the user.\n",
     "\n",
-    "We use the term tool calling interchangeably with function calling. Although\n",
-    "function calling is sometimes meant to refer to invocations of a single function,\n",
-    "we treat all models as though they can return multiple tool or function calls in \n",
-    "each message.\n",
+    "If you are looking for a guide on how to actually run the tool function and pass the results back to a chat model, [check out this guide](/docs/how_to/tool_results_pass_to_model/).\n",
     "\n",
-    ":::\n",
-    "\n",
-    ":::info Supported models\n",
-    "\n",
-    "You can find a [list of all models that support tool calling](/docs/integrations/chat/).\n",
-    "\n",
-    ":::\n",
-    "\n",
-    "Tool calling allows a chat model to respond to a given prompt by \"calling a tool\".\n",
-    "While the name implies that the model is performing \n",
-    "some action, this is actually not the case! The model generates the \n",
-    "arguments to a tool, and actually running the tool (or not) is up to the user.\n",
-    "For example, if you want to [extract output matching some schema](/docs/how_to/structured_output/) \n",
-    "from unstructured text, you could give the model an \"extraction\" tool that takes \n",
-    "parameters matching the desired schema, then treat the generated output as your final \n",
-    "result.\n",
-    "\n",
-    ":::note\n",
-    "\n",
-    "If you only need formatted values, try the [.with_structured_output()](/docs/how_to/structured_output/#the-with_structured_output-method) chat model method as a simpler entrypoint.\n",
-    "\n",
-    ":::\n",
-    "\n",
-    "However, tool calling goes beyond [structured output](/docs/how_to/structured_output/)\n",
-    "since you can pass responses from called tools back to the model to create longer interactions.\n",
-    "For instance, given a search engine tool, an LLM might handle a \n",
-    "query by first issuing a call to the search engine with arguments. The system calling the LLM can \n",
-    "receive the tool call, execute it, and return the output to the LLM to inform its \n",
-    "response. LangChain includes a suite of [built-in tools](/docs/integrations/tools/) \n",
-    "and supports several methods for defining your own [custom tools](/docs/how_to/custom_tools). \n",
+    ":::note Supported models\n",
     "\n",
     "Tool calling is not universal, but many popular LLM providers, including [Anthropic](https://www.anthropic.com/), \n",
     "[Cohere](https://cohere.com/), [Google](https://cloud.google.com/vertex-ai), \n",
     "[Mistral](https://mistral.ai/), [OpenAI](https://openai.com/), and others, \n",
     "support variants of a tool calling feature.\n",
     "\n",
-    "LangChain implements standard interfaces for defining tools, passing them to LLMs, \n",
-    "and representing tool calls. This guide and the other How-to pages in the Tool section will show you how to use tools with LangChain."
+    "You can find a [list of all models that support tool calling](/docs/integrations/chat/).\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "LangChain implements standard interfaces for defining tools, passing them to LLMs, and representing tool calls.\n",
+    "This guide will cover how to bind tools to an LLM, then invoke the LLM to generate these arguments."
    ]
   },
   {
@@ -114,7 +89,7 @@
    "source": [
     "LangChain also implements a `@tool` decorator that allows for further control of the tool schema, such as tool names and argument descriptions. See the how-to guide [here](/docs/how_to/custom_tools/#creating-tools-from-functions) for detail.\n",
     "\n",
-    "We can also define the schema using [Pydantic](https://docs.pydantic.dev):"
+    "We can also define the schemas without the accompanying functions using [Pydantic](https://docs.pydantic.dev):"
    ]
   },
   {
@@ -149,7 +124,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can bind them to chat models as follows:\n",
+    "We can bind those schemas to a chat model using the `.bind_tools()` method to handle converting\n",
+    "`Multiply` to the proper format for the model. The tool schema will then be passed it in each time the model is invoked.\n",
     "\n",
     "```{=mdx}\n",
     "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
@@ -158,11 +134,7 @@
     "  customVarName=\"llm\"\n",
     "  fireworksParams={`model=\"accounts/fireworks/models/firefunction-v1\", temperature=0`}\n",
     "/>\n",
-    "```\n",
-    "\n",
-    "We'll use the `.bind_tools()` method to handle converting\n",
-    "`Multiply` to the proper format for the model, then and bind it (i.e.,\n",
-    "passing it in each time the model is invoked)."
+    "```"
    ]
   },
   {
@@ -183,7 +155,7 @@
     "\n",
     "os.environ[\"OPENAI_API_KEY\"] = getpass()\n",
     "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)"
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0)"
    ]
   },
   {
@@ -214,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, even though the prompt didn't really suggest a tool call, our LLM made one since it was forced to do so. You can look at the docs for [bind_tools()](https://api.python.langchain.com/en/latest/chat_models/langchain_openai.chat_models.base.BaseChatOpenAI.html#langchain_openai.chat_models.base.BaseChatOpenAI.bind_tools) to learn about all the ways to customize how your LLM selects tools."
+    "As we can see our LLM called a tool! You can look at the docs for [bind_tools()](https://api.python.langchain.com/en/latest/chat_models/langchain_openai.chat_models.base.BaseChatOpenAI.html#langchain_openai.chat_models.base.BaseChatOpenAI.bind_tools) to learn about all the ways to customize how your LLM selects tools, as well as [this guide on how to force the LLM to call a tool](/docs/how_to/tool_choice/) rather than letting it decide."
    ]
   },
   {
@@ -308,17 +280,17 @@
    "source": [
     "## Next steps\n",
     "\n",
-    "Now you've learned how to bind tool schemas to a chat model and to call those tools. Next, you can learn more about how to use tools:\n",
+    "Now you've learned how to bind tool schemas to a chat model and have the model call the tool.\n",
     "\n",
-    "- Few shot promting [with tools](/docs/how_to/tools_few_shot/)\n",
-    "- Stream [tool calls](/docs/how_to/tool_streaming/)\n",
-    "- Bind [model-specific tools](/docs/how_to/tools_model_specific/)\n",
-    "- Pass [runtime values to tools](/docs/how_to/tool_runtime)\n",
+    "Next, check out this guide on actually calling the tool function and passing the results back to the model:\n",
+    "\n",
     "- Pass [tool results back to model](/docs/how_to/tool_results_pass_to_model)\n",
     "\n",
     "You can also check out some more specific uses of tool calling:\n",
     "\n",
-    "- Building [tool-using chains and agents](/docs/how_to#tools)\n",
+    "- Few shot prompting [with tools](/docs/how_to/tools_few_shot/)\n",
+    "- Stream [tool calls](/docs/how_to/tool_streaming/)\n",
+    "- Pass [runtime values to tools](/docs/how_to/tool_runtime)\n",
     "- Getting [structured outputs](/docs/how_to/structured_output/) from models"
    ]
   }
@@ -339,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
