--- a/docs/docs/how_to/tool_calling.ipynb
+++ b/docs/docs/how_to/tool_calling.ipynb
@@ -33,7 +33,7 @@
     "Remember, while the name implies that the model is directly performing some action, this is actually not the case!\n",
     "The model only generates the arguments to a tool, and actually running the tool (or not) is up to the user.\n",
     "\n",
-    "If you are looking for a guide on how to actually run the tool function and pass the results back to a chat model, [check out this guide](/docs/how_to/tool_results_pass_to_model/).\n",
+    "If you are looking for a guide on the other half of the loop (actually running a tool function and passing the results back to a chat model), [check out this guide](/docs/how_to/tool_results_pass_to_model/).\n",
     "\n",
     ":::note Supported models\n",
     "\n",
