--- a/docs/docs/how_to/tool_calling.ipynb
+++ b/docs/docs/how_to/tool_calling.ipynb
@@ -37,12 +37,11 @@
     "\n",
     ":::note Supported models\n",
     "\n",
-    "Tool calling is not universal, but many popular LLM providers, including [Anthropic](https://www.anthropic.com/), \n",
-    "[Cohere](https://cohere.com/), [Google](https://cloud.google.com/vertex-ai), \n",
-    "[Mistral](https://mistral.ai/), [OpenAI](https://openai.com/), and others, \n",
-    "support variants of a tool calling feature.\n",
+    "Tool calling is not universal, but is supported by many popular LLM providers, including [Anthropic](/docs/integrations/chat/anthropic/), \n",
+    "[Cohere](/docs/integrations/chat/cohere/), [Google](/docs/integrations/chat/google_vertex_ai_palm/), \n",
+    "[Mistral](/docs/integrations/chat/mistralai/), [OpenAI](/docs/integrations/chat/openai/), and even for locally-running models via [Ollama](/docs/integrations/chat/ollama/).\n",
     "\n",
-    "You can find a [list of all models that support tool calling](/docs/integrations/chat/).\n",
+    "You can find a [list of all models that support tool calling here](/docs/integrations/chat/).\n",
     "\n",
     ":::\n",
     "\n",
@@ -87,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LangChain also implements a `@tool` decorator that allows for further control of the tool schema, such as tool names and argument descriptions. See the how-to guide [here](/docs/how_to/custom_tools/#creating-tools-from-functions) for detail.\n",
+    "LangChain also implements a `@tool` decorator that allows for further control of the tool schema, such as tool names and argument descriptions. See the how-to guide [here](/docs/how_to/custom_tools/#creating-tools-from-functions) for details.\n",
     "\n",
     "We can also define the schemas without the accompanying functions using [Pydantic](https://docs.pydantic.dev):"
    ]
@@ -124,8 +123,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can bind those schemas to a chat model using the `.bind_tools()` method to handle converting\n",
-    "`Multiply` to the proper format for the model. The tool schema will then be passed it in each time the model is invoked.\n",
+    "To actually bind those schemas to a chat model, we'll use the `.bind_tools()` method. This handles converting\n",
+    "the `Add` and `Multiply` schemas to the proper format for the model. The tool schema will then be passed it in each time the model is invoked.\n",
     "\n",
     "```{=mdx}\n",
     "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
@@ -186,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see our LLM called a tool! You can look at the docs for [bind_tools()](https://api.python.langchain.com/en/latest/chat_models/langchain_openai.chat_models.base.BaseChatOpenAI.html#langchain_openai.chat_models.base.BaseChatOpenAI.bind_tools) to learn about all the ways to customize how your LLM selects tools, as well as [this guide on how to force the LLM to call a tool](/docs/how_to/tool_choice/) rather than letting it decide."
+    "As we can see our LLM generated arguments to a tool! You can look at the docs for [bind_tools()](https://api.python.langchain.com/en/latest/chat_models/langchain_openai.chat_models.base.BaseChatOpenAI.html#langchain_openai.chat_models.base.BaseChatOpenAI.bind_tools) to learn about all the ways to customize how your LLM selects tools, as well as [this guide on how to force the LLM to call a tool](/docs/how_to/tool_choice/) rather than letting it decide."
    ]
   },
   {
