--- a/docs/docs/how_to/tool_calling.ipynb
+++ b/docs/docs/how_to/tool_calling.ipynb
@@ -22,6 +22,7 @@
     ":::info Prerequisites\n",
     "\n",
     "This guide assumes familiarity with the following concepts:\n",
+    "\n",
     "- [Chat models](/docs/concepts/#chat-models)\n",
     "- [LangChain Tools](/docs/concepts/#tools)\n",
     "- [Tool calling](/docs/concepts/#functiontool-calling)\n",
@@ -30,10 +31,12 @@
     ":::\n",
     "\n",
     "[Tool calling](/docs/concepts/#tools) allows a chat model to respond to a given prompt by \"calling a tool\".\n",
-    "Remember, while the name implies that the model is directly performing some action, this is actually not the case!\n",
-    "The model only generates the arguments to a tool, and actually running the tool (or not) is up to the user.\n",
     "\n",
-    "If you are looking for a guide on the other half of the loop (actually running a tool function and passing the results back to a chat model), [check out this guide](/docs/how_to/tool_results_pass_to_model/).\n",
+    "Remember, while the name \"tool calling\" implies that the model is directly performing some action, this is actually not the case! The model only generates the arguments to a tool, and actually running the tool (or not) is up to the user.\n",
+    "\n",
+    "Tool calling is a general technique that generates structured output from a model, and you can use it even when you don't intend to invoke any tools. An example use-case of that is [extraction from unstructured text](/docs/tutorials/extraction/).\n",
+    "\n",
+    "If you are looking for an example of **using** tools and passing the results back to a chat model, [check out this guide](/docs/how_to/tool_results_pass_to_model/).\n",
     "\n",
     ":::note Supported models\n",
     "\n",
