--- a/docs/docs/how_to/tool_results_pass_to_model.ipynb
+++ b/docs/docs/how_to/tool_results_pass_to_model.ipynb
@@ -11,15 +11,54 @@
     "\n",
     "- [Tools](/docs/concepts/#tools)\n",
     "- [Function/tool calling](/docs/concepts/#functiontool-calling)\n",
+    "- [Using chat models to call tools](/docs/how_to/tool_calling)\n",
+    "- [Defining custom tools](/docs/how_to/custom_tools/)\n",
     "\n",
     ":::\n",
     "\n",
-    "If we're using the model-generated tool invocations to actually call tools and want to pass the tool results back to the model, we can do so using `ToolMessage`s and `ToolCall`s. First, let's define our tools and our model."
+    "Some models are capable of **tool calling** - or generating arguments that conform to a specific schema. This guide will demonstrate how to use those tool cals to actually call a function and properly pass the results back to the model.\n",
+    "\n",
+    "![Diagram of a tool calling flow](/img/tool_calling_flow.png)\n",
+    "\n",
+    "First, let's define our tools and our model:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{=mdx}\n",
+    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "\n",
+    "<ChatModelTabs\n",
+    "  customVarName=\"llm\"\n",
+    "  fireworksParams={`model=\"accounts/fireworks/models/firefunction-v1\", temperature=0`}\n",
+    "/>\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "\n",
+    "import os\n",
+    "from getpass import getpass\n",
+    "\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "os.environ[\"OPENAI_API_KEY\"] = getpass()\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,23 +77,8 @@
     "    return a * b\n",
     "\n",
     "\n",
-    "tools = [add, multiply]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from getpass import getpass\n",
+    "tools = [add, multiply]\n",
     "\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = getpass()\n",
-    "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)\n",
     "llm_with_tools = llm.bind_tools(tools)"
    ]
   },
@@ -62,13 +86,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The nice thing about Tools is that if we invoke them with a ToolCall, we'll automatically get back a ToolMessage that can be fed back to the model: \n",
+    "Now, let's get the model to call a tool. We'll add it to a list of messages that we'll treat as conversation history:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='' additional_kwargs={'tool_calls': [{'id': 'call_nXPLal4Dv5Oykl3INhsKXx9y', 'function': {'arguments': '{\"a\": 3, \"b\": 12}', 'name': 'multiply'}, 'type': 'function'}, {'id': 'call_Kd2LOwBVCDtcbu6M1415lGL6', 'function': {'arguments': '{\"a\": 11, \"b\": 49}', 'name': 'add'}, 'type': 'function'}]} response_metadata={'token_usage': {'completion_tokens': 49, 'prompt_tokens': 88, 'total_tokens': 137}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None} id='run-a5e575d4-98ee-4b9e-8886-a201230295bf-0' tool_calls=[{'name': 'multiply', 'args': {'a': 3, 'b': 12}, 'id': 'call_nXPLal4Dv5Oykl3INhsKXx9y', 'type': 'tool_call'}, {'name': 'add', 'args': {'a': 11, 'b': 49}, 'id': 'call_Kd2LOwBVCDtcbu6M1415lGL6', 'type': 'tool_call'}] usage_metadata={'input_tokens': 88, 'output_tokens': 49, 'total_tokens': 137}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.messages import HumanMessage\n",
     "\n",
-    ":::info Requires ``langchain-core >= 0.2.19``\n",
+    "query = \"What is 3 * 12? Also, what is 11 + 49?\"\n",
     "\n",
-    "This functionality was added in ``langchain-core == 0.2.19``. Please make sure your package is up to date.\n",
+    "messages = [HumanMessage(query)]\n",
+    "\n",
+    "ai_msg = llm_with_tools.invoke(messages)\n",
+    "\n",
+    "print(ai_msg)\n",
+    "\n",
+    "messages.append(ai_msg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next let's invoke the tool functions using the args the model populated!\n",
+    "\n",
+    "Conveniently, if we invoke a LangChain `Tool` with a `ToolCall`, we'll automatically get back a `ToolMessage` that can be fed back to the model:\n",
+    "\n",
+    ":::info Requires `langchain-core >= 0.2.19`\n",
+    "\n",
+    "This functionality was added in `langchain-core == 0.2.19`. Please make sure your package is up to date.\n",
+    "\n",
+    "If you are on earlier versions of `langchain-core`, you will need to extract the `args` field from the tool and construct a `ToolMessage` manually.\n",
     "\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[HumanMessage(content='What is 3 * 12? Also, what is 11 + 49?'),\n",
+       " AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_nXPLal4Dv5Oykl3INhsKXx9y', 'function': {'arguments': '{\"a\": 3, \"b\": 12}', 'name': 'multiply'}, 'type': 'function'}, {'id': 'call_Kd2LOwBVCDtcbu6M1415lGL6', 'function': {'arguments': '{\"a\": 11, \"b\": 49}', 'name': 'add'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 49, 'prompt_tokens': 88, 'total_tokens': 137}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-a5e575d4-98ee-4b9e-8886-a201230295bf-0', tool_calls=[{'name': 'multiply', 'args': {'a': 3, 'b': 12}, 'id': 'call_nXPLal4Dv5Oykl3INhsKXx9y', 'type': 'tool_call'}, {'name': 'add', 'args': {'a': 11, 'b': 49}, 'id': 'call_Kd2LOwBVCDtcbu6M1415lGL6', 'type': 'tool_call'}], usage_metadata={'input_tokens': 88, 'output_tokens': 49, 'total_tokens': 137}),\n",
+       " ToolMessage(content='36', name='multiply', tool_call_id='call_nXPLal4Dv5Oykl3INhsKXx9y'),\n",
+       " ToolMessage(content='60', name='add', tool_call_id='call_Kd2LOwBVCDtcbu6M1415lGL6')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for tool_call in ai_msg.tool_calls:\n",
+    "    selected_tool = {\"add\": add, \"multiply\": multiply}[tool_call[\"name\"].lower()]\n",
+    "    tool_msg = selected_tool.invoke(tool_call)\n",
+    "    messages.append(tool_msg)\n",
+    "\n",
+    "messages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And finally, we'll invoke the model with the tool results. The model will use this information to generate a final answer to our original query:"
    ]
   },
   {
@@ -79,44 +176,10 @@
     {
      "data": {
       "text/plain": [
-       "[HumanMessage(content='What is 3 * 12? Also, what is 11 + 49?'),\n",
-       " AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_Smg3NHJNxrKfAmd4f9GkaYn3', 'function': {'arguments': '{\"a\": 3, \"b\": 12}', 'name': 'multiply'}, 'type': 'function'}, {'id': 'call_55K1C0DmH6U5qh810gW34xZ0', 'function': {'arguments': '{\"a\": 11, \"b\": 49}', 'name': 'add'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 49, 'prompt_tokens': 88, 'total_tokens': 137}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-56657feb-96dd-456c-ab8e-1857eab2ade0-0', tool_calls=[{'name': 'multiply', 'args': {'a': 3, 'b': 12}, 'id': 'call_Smg3NHJNxrKfAmd4f9GkaYn3', 'type': 'tool_call'}, {'name': 'add', 'args': {'a': 11, 'b': 49}, 'id': 'call_55K1C0DmH6U5qh810gW34xZ0', 'type': 'tool_call'}], usage_metadata={'input_tokens': 88, 'output_tokens': 49, 'total_tokens': 137}),\n",
-       " ToolMessage(content='36', name='multiply', tool_call_id='call_Smg3NHJNxrKfAmd4f9GkaYn3'),\n",
-       " ToolMessage(content='60', name='add', tool_call_id='call_55K1C0DmH6U5qh810gW34xZ0')]"
+       "AIMessage(content='3 * 12 is 36 and 11 + 49 is 60.', response_metadata={'token_usage': {'completion_tokens': 18, 'prompt_tokens': 153, 'total_tokens': 171}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-a2b04fc3-cb38-4c2a-b67f-e2022db9bc8a-0', usage_metadata={'input_tokens': 153, 'output_tokens': 18, 'total_tokens': 171})"
       ]
      },
      "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langchain_core.messages import HumanMessage, ToolMessage\n",
-    "\n",
-    "query = \"What is 3 * 12? Also, what is 11 + 49?\"\n",
-    "\n",
-    "messages = [HumanMessage(query)]\n",
-    "ai_msg = llm_with_tools.invoke(messages)\n",
-    "messages.append(ai_msg)\n",
-    "for tool_call in ai_msg.tool_calls:\n",
-    "    selected_tool = {\"add\": add, \"multiply\": multiply}[tool_call[\"name\"].lower()]\n",
-    "    tool_msg = selected_tool.invoke(tool_call)\n",
-    "    messages.append(tool_msg)\n",
-    "messages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='3 * 12 is 36 and 11 + 49 is 60.', response_metadata={'token_usage': {'completion_tokens': 18, 'prompt_tokens': 153, 'total_tokens': 171}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-ba5032f0-f773-406d-a408-8314e66511d0-0', usage_metadata={'input_tokens': 153, 'output_tokens': 18, 'total_tokens': 171})"
-      ]
-     },
-     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,15 +192,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that we pass back the same `id` in the `ToolMessage` as the what we receive from the model in order to help the model match tool responses with tool calls."
+    "Note that each `ToolMessage` must include a `tool_call_id` that matches an `id` in the original tool calls that the model generates. This helps the model match tool responses with tool calls.\n",
+    "\n",
+    "Tool calling agents, like those in [LangGraph](https://langchain-ai.github.io/langgraph/tutorials/introduction/), use this basic flow to answer queries and solve tasks.\n",
+    "\n",
+    "## Related\n",
+    "\n",
+    "- [LangGraph quickstart](https://langchain-ai.github.io/langgraph/tutorials/introduction/)\n",
+    "- Few shot prompting [with tools](/docs/how_to/tools_few_shot/)\n",
+    "- Stream [tool calls](/docs/how_to/tool_streaming/)\n",
+    "- Pass [runtime values to tools](/docs/how_to/tool_runtime)\n",
+    "- Getting [structured outputs](/docs/how_to/structured_output/) from models"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "poetry-venv-311",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "poetry-venv-311"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -149,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
