--- a/docs/docs/concepts.mdx
+++ b/docs/docs/concepts.mdx
@@ -964,7 +964,7 @@ For a full list of model providers that support JSON mode, see [this table](/doc
 We use the term tool calling interchangeably with function calling. Although
 function calling is sometimes meant to refer to invocations of a single function,
 we treat all models as though they can return multiple tool or function calls in
-each message
+each message.
 :::
 
 Tool calling allows a model to respond to a given prompt by generating output that
