--- a/docs/docs/how_to/tool_calling.ipynb
+++ b/docs/docs/how_to/tool_calling.ipynb
@@ -284,7 +284,7 @@
     "\n",
     "Now you've learned how to bind tool schemas to a chat model and have the model call the tool.\n",
     "\n",
-    "Next, check out this guide on actually calling the tool function and passing the results back to the model:\n",
+    "Next, check out this guide on actually using the tool by invoking the function and passing the results back to the model:\n",
     "\n",
     "- Pass [tool results back to model](/docs/how_to/tool_results_pass_to_model)\n",
     "\n",
