--- a/docs/docs/how_to/tool_results_pass_to_model.ipynb
+++ b/docs/docs/how_to/tool_results_pass_to_model.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "Conveniently, if we invoke a LangChain `Tool` with a `ToolCall`, we'll automatically get back a `ToolMessage` that can be fed back to the model:\n",
     "\n",
-    ":::info Requires `langchain-core >= 0.2.19`\n",
+    ":::caution Compatibility\n",
     "\n",
     "This functionality was added in `langchain-core == 0.2.19`. Please make sure your package is up to date.\n",
     "\n",
