--- a/docs/docs/how_to/tool_calling.ipynb
+++ b/docs/docs/how_to/tool_calling.ipynb
@@ -30,7 +30,7 @@
     "\n",
     ":::\n",
     "\n",
-    "[Tool calling](/docs/concepts/#tools) allows a chat model to respond to a given prompt by \"calling a tool\".\n",
+    "[Tool calling](/docs/concepts/#functiontool-calling) allows a chat model to respond to a given prompt by \"calling a tool\".\n",
     "\n",
     "Remember, while the name \"tool calling\" implies that the model is directly performing some action, this is actually not the case! The model only generates the arguments to a tool, and actually running the tool (or not) is up to the user.\n",
     "\n",
