--- a/docs/docs/how_to/tool_results_pass_to_model.ipynb
+++ b/docs/docs/how_to/tool_results_pass_to_model.ipynb
@@ -9,14 +9,14 @@
     ":::info Prerequisites\n",
     "This guide assumes familiarity with the following concepts:\n",
     "\n",
-    "- [Tools](/docs/concepts/#tools)\n",
+    "- [LangChain Tools](/docs/concepts/#tools)\n",
     "- [Function/tool calling](/docs/concepts/#functiontool-calling)\n",
     "- [Using chat models to call tools](/docs/how_to/tool_calling)\n",
     "- [Defining custom tools](/docs/how_to/custom_tools/)\n",
     "\n",
     ":::\n",
     "\n",
-    "Some models are capable of **tool calling** - or generating arguments that conform to a specific schema. This guide will demonstrate how to use those tool cals to actually call a function and properly pass the results back to the model.\n",
+    "Some models are capable of [**tool calling**](/docs/concepts/#functiontool-calling) - generating arguments that conform to a specific user-provided schema. This guide will demonstrate how to use those tool cals to actually call a function and properly pass the results back to the model.\n",
     "\n",
     "![Diagram of a tool calling flow](/img/tool_calling_flow.png)\n",
     "\n",
