--- a/docs/docs/contributing/integrations/community.mdx
+++ b/docs/docs/contributing/integrations/community.mdx
@@ -9,17 +9,30 @@ sidebar_label: Community
 Before beginning, make sure you have read about the different types of integrations in the [Contributing Integrations](./index.mdx) guide.
 :::
 
-In the following sections, we'll walk through how to contribute to each of these packages from a fake company, `Parrot Link AI`.
-
 ## What is a community integration
 
-Community integrations 
+Community integrations live in the `langchain-community` package and are maintained by the community.
+
+The `langchain-community` package is released by LangChain at least once every 7 days, and it contains
+integrations and implementations of the interfaces defined in the `langchain-core` package.
 
 ## Why contribute a community integration
 
+If you are a company that wants to integrate with LangChain, you can contribute a community integration to:
+
+- Make it easy for users to use your product with LangChain
+- Quickly enable use cases that require multiple products
+- Allow LangChain users to try out your product with their existing project (e.g. 
+if you host a chat model, users can try yours out to compare the experience with 
+their current model)
+
+If you are a user of any service, we also welcome your contributions to community integrations!
+Service users often have some of the best insights into how to use a service, and your contributions
+can help other users get started with the service in as smooth a way as possible.
+
 ## How to contribute a community integration
 
-
+In the following sections, we'll walk through how to contribute a chat model from a fake company, `Parrot Link AI`.
 
 To begin, make sure you have all the dependencies outlined in guide on [Contributing Code](/docs/contributing/code/).
 
