--- a/docs/docs/contributing/integrations/index.mdx
+++ b/docs/docs/contributing/integrations/index.mdx
@@ -15,7 +15,7 @@ In order to maintain a comprehensive integrations ecosystem, we need integration
 partners to build their integrations in standard ways. This guide will help you 
 understand the different types of integrations and how to contribute them.
 
-In this document, you will find guides for the following types of integrations:
+In this section, you will find guides for the following types of integrations:
 
 <table style={{textAlign: "center"}}>
   <tr>
@@ -69,3 +69,7 @@ In this document, you will find guides for the following types of integrations:
     <td colspan="3"><a href="./package.mdx">Package Guide</a></td>
   </tr>
 </table>
+
+:::success
+Let's get started with your integration, and build a [**Community Integration**](./community.mdx).
+:::
