Update concepts, add more images

--- a/docs/docs/how_to/tool_calling.ipynb
+++ b/docs/docs/how_to/tool_calling.ipynb
@@ -36,6 +36,8 @@
     "\n",
     "Tool calling is a general technique that generates structured output from a model, and you can use it even when you don't intend to invoke any tools. An example use-case of that is [extraction from unstructured text](/docs/tutorials/extraction/).\n",
     "\n",
+    "![Diagram of calling a tool](/img/tool_call.png)\n",
+    "\n",
     "If you are looking for an example of **using** tools and passing the results back to a chat model, [check out this guide](/docs/how_to/tool_results_pass_to_model/).\n",
     "\n",
     ":::note Supported models\n",
