--- a/docs/docs/how_to/tool_results_pass_to_model.ipynb
+++ b/docs/docs/how_to/tool_results_pass_to_model.ipynb
@@ -18,7 +18,9 @@
     "\n",
     "Some models are capable of [**tool calling**](/docs/concepts/#functiontool-calling) - generating arguments that conform to a specific user-provided schema. This guide will demonstrate how to use those tool cals to actually call a function and properly pass the results back to the model.\n",
     "\n",
-    "![Diagram of a tool calling flow](/img/tool_calling_flow.png)\n",
+    "![Diagram of a tool call invocation](/img/tool_invocation.png)\n",
+    "\n",
+    "![Diagram of a tool call result](/img/tool_results.png)\n",
     "\n",
     "First, let's define our tools and our model:"
    ]
